# rust-sdl2-wasm

./: .gitignore  Cargo.toml  README.md  build.sh  build_and_run_web.sh  index.html  prepare_deploy.sh  run_web.sh  rust-sdl2-wasm.js  rust_sdl2_wasm.wasm  serve.sh  setup_web.sh
.cargo/: config.toml
.github/workflows/: deploy.yaml
src/: main.rs
