[package]
name = "rust-sdl2-wasm"
version = "0.1.0"
edition = "2021"
[features]
# default = ["egui_render_glow"]
default = ["egui_render_wgpu"]

[dependencies]
mlua = { version = "*", features = ["luau"] }
egui_render_wgpu = { git = "https://github.com/coderedart/etk.git", optional = true }
egui_render_glow = { git = "https://github.com/coderedart/etk.git", optional = true }

egui_backend = { git = "https://github.com/coderedart/etk.git" }
egui_window_sdl2 = { git = "https://github.com/coderedart/etk.git" }

# egui_render_glow = { path = "../etk/crates/egui_render_glow" }
# egui_render_wgpu = { path = "../etk/crates/egui_render_wgpu" }
# egui_backend = { path = "../etk/crates/egui_backend" }
# egui_window_sdl2 = { path = "../etk/crates/egui_window_sdl2" }

tracing-subscriber = { version = "*", features = ["env-filter", "registry"] }
